# yt-dlp-service

./: .gitignore  API.md  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml  cookies.txt  download.sh
.github/workflows/: ci.yml
examples/: client.py
macos/: com.ytdlp.service.plist
scripts/: install-macos-service.sh  uninstall-macos-service.sh
src/: config.rs  cookies.rs  handlers.rs  main.rs  state.rs  util.rs
