[package]
name = "yt_dlp_service"
version = "0.2.0"
edition = "2021"
description = "YouTube video streaming download service"

[dependencies]
actix-web = "4"
env_logger = "0.11"
bytes = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
futures = "0.3"
async-stream = "0.3"
tempfile = "3"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
